--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "export NODE_ENV=production && node server.js",
 		"dev": "nodemon server.js",
-		"staging": "node server.js"
+		"staging": "node server.js",
+		"chain": ""
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,6 +15,7 @@
 		"api": "^5.0.8",
 		"axios": "^0.21.4",
 		"bcrypt": "^5.1.0",
+		"colors": "^1.4.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"http-status-codes": "^2.2.0",
@@ -24,6 +26,7 @@
 		"moment-timezone": "^0.5.43",
 		"mongoose": "^5.13.15",
 		"morgan": "^1.10.0",
+		"web3": "^4.1.1",
 		"winston": "^3.9.0"
 	},
 	"devDependencies": {
