--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"moment-timezone": "^0.5.43",
 		"mongoose": "^5.13.15",
 		"morgan": "^1.10.0",
+		"twilio": "^4.17.0",
 		"web3": "^4.1.1",
 		"winston": "^3.9.0"
 	},
