--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"bcrypt": "^5.1.0",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"http-status-codes": "^2.2.0",
 		"joi": "^17.6.4",
